docs/original_moodle/entregas/todas/3/Reto Ejemplo Segundo Previo/García Brayan 2513/2019-10-20-22-27-31.ceg/compilation.txt
Bicicleta.java:9: error: constructor Vehiculo in class Vehiculo cannot be applied to given types;
    public Bicicleta(String placa, String cedulaPropietario, int hora, int minuto, int segundo) {
                                                                                                ^
  required: String,String,int,int,int
  found: no arguments
  reason: actual and formal argument lists differ in length
CarroGrande.java:9: error: constructor Vehiculo in class Vehiculo cannot be applied to given types;
    public CarroGrande(String placa, String cedulaPropietario, int hora, int minuto, int segundo) {
                                                                                                  ^
  required: String,String,int,int,int
  found: no arguments
  reason: actual and formal argument lists differ in length
CarroPequeno.java:9: error: constructor Vehiculo in class Vehiculo cannot be applied to given types;
    public CarroPequeno(String placa, String cedulaPropietario, int hora, int minuto, int segundo) {
                                                                                                   ^
  required: String,String,int,int,int
  found: no arguments
  reason: actual and formal argument lists differ in length
3 errors
Not compiled
